fix excessive spacing

--- a/dark.css
+++ b/dark.css
@@ -10,7 +10,8 @@
  /*# sourceMappingURL=/sm/4a51164882967d28a74fabce02685c18fa45a529b77514edc75d708f04dd08b9.map */
 
  .rack {
-    font-size: 3.5em;
+    font-size: 3.2em;
+    letter-spacing: 0.3rem;
   }
 
   
