--- a/style.css
+++ b/style.css
@@ -222,7 +222,8 @@ html {
   }
 
   .rack {
-    font-size: 3.5em;
+    font-size: 3.2em;
+    letter-spacing: 0.3rem;
   }
 
   
